Minor fix: make ACL2 tutorial tooltip not wrap

--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ button[aria-label]::before {
   text-align: center;
   font-size: 14px;
   line-height: 1.2;
+  white-space: nowrap;
 }
 
 button[aria-label]:hover::before {
